testsuite/tests/package/package06e.stderr

package06e.hs:2:1: error: [GHC-87110]
    Could not load module ‘GHC.Hs.Type’.
    It is a member of the hidden package ‘ghc-9.7’.
    You can run ‘:set -package ghc’ to expose it.
    (Note: this unloads all the modules in the current scope.)
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.

package06e.hs:3:1: error: [GHC-87110]
    Could not load module ‘GHC.Types.Unique.FM’.
    It is a member of the hidden package ‘ghc-9.7’.
    You can run ‘:set -package ghc’ to expose it.
    (Note: this unloads all the modules in the current scope.)
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
